update Dockerfile, inventory.ini, playbook.yaml and ansible/02-tbd/README.md

--- a/ansible/01-install-python-playbook/Dockerfile
+++ b/ansible/01-install-python-playbook/Dockerfile
@@ -5,13 +5,12 @@ FROM ubuntu:20.04
 ENV ANSIBLE_VERSION=2.9.17
 ENV DEBIAN_FRONTEND=noninteractive
 
-# copy all files from the current directory to the /ansible directory in the container
+# Copy all files from the current directory to the /ansible directory in the container
 COPY . /ansible
-
 
 # Update the package list and install necessary packages
 RUN apt-get update && \
-    apt-get install -y gcc python3 python3-pip openssh-client openssh-server sshpass && \
+    apt-get install -y gcc python3 python3-pip openssh-client openssh-server sshpass sudo && \
     apt-get clean all && \
     rm -rf /var/lib/apt/lists/*
 
@@ -19,9 +18,10 @@ RUN apt-get update && \
 RUN pip3 install --upgrade pip && \
     pip3 install "ansible==${ANSIBLE_VERSION}"
 
-    # allow ssh user named mateo and password secret123
+# Allow ssh user named mateo and password secret123
 RUN useradd -m -s /bin/bash mateo && \
-    echo "mateo:secret123" | chpasswd
+    echo "mateo:secret123" | chpasswd && \
+    usermod -aG sudo mateo
 
 # Verify Ansible installation
 RUN ansible --version
